# cataneration

./: .gitignore  =5.18.0  MFL_TROUBLESHOOTING.md  README.md  fantasy_feedback_priorities_codex.md  leagues.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: owner_aliases.csv  owners.csv  team_aliases.csv
config/: leagues.yaml
data/mart/: mart_h2h.csv  mart_matchups.csv  mart_owner_achievements.csv  mart_owner_all_time.csv  mart_owner_season.csv  mart_playoff_seeds.csv  mart_titles.csv
docs/: sleeper_playoffs.md
fantasy_history.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_build.py  run_ingest.py
src/common/: http.py  ids.py  schemas.py  sleeper_playoffs.py
src/ingest/: fleaflicker.py  mfl.py  sleeper.py
src/transform/: build_marts.py  normalize_fleaflicker.py  normalize_mfl.py  normalize_sleeper.py  seed_mappings.py
src/ui/: app.py
tests/: test_sleeper_playoffs.py
tests/fixtures/: sleeper_winners_bracket.json
